# AIsEval

./: .gitignore  AIsEval.sln  AIsEval.slnx  Links.md  README.md
Reporting/: aidotnet-small-set  findings.md  pytorch-small-set
TestData/RegressionTestData/: features.csv  tests.csv
TestData/RegressionTestData/Complex/LargeSet/: features.csv  tests.csv
TestData/RegressionTestData/Complex/SmallSet/: features.csv  tests.csv
TestData/RegressionTestData/Simple/SmallSet/: features.csv  tests.csv
aidotnet-benchmarks/: AiDotNetBenchmarks.csproj  README.md
aidotnet-benchmarks/Properties/: launchSettings.json
aidotnet-benchmarks/src/AiDotNetBenchmarks/: Program.cs
aidotnet-benchmarks/src/AiDotNetBenchmarks/Controllers/: BothController.cs  RegressionController.cs
aidotnet-benchmarks/src/AiDotNetBenchmarks/Controllers/RegressionTestData/: features.csv
postman/: Testing.postman_collection.json
pytorch-benchmarks/: README.md  pyproject.toml
pytorch-benchmarks/src/pytorch_benchmarks/: __init__.py  __main__.py  api.py  server.py
pytorch-benchmarks/src/pytorch_benchmarks.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pytorch-benchmarks/src/pytorch_benchmarks/controllers/: __init__.py  regression_controller.py
pytorch-benchmarks/tests/: test_regression_controller.py
scripts/: run_all.sh
