[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorch-benchmarks"
version = "0.1.0"
description = "Native Python PyTorch training and inference benchmark harness."
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "psutil>=5.9",
]

[project.scripts]
pytorch-bench = "pytorch_benchmarks.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
